# multimedia-experiments

./: .clang-format  .gitignore  README.md
.github/workflows/: autobuild-nginx.yml  gosrc-ci.yml  medialib-ci.yml
cuda-hello-world/: README.md  vec_add.cu
ffmpeg-tests/: CMakeLists.txt  README.md
ffmpeg-tests/danger-tutorials/: 01_making_screencaps.c  02_to_screen.c  CMakeLists.txt
ffmpeg-tests/player/: CMakeLists.txt  audio_queue.cc  audio_queue.h  decoder.cc  decoder.h  libav_headers.h  main.cc  player.cc  player.h  ring_buffer.cc  ring_buffer.h
ffmpeg-tests/transcoding/: CMakeLists.txt  config_ctx.h  decoding.cc  decoding.h  encoding.cc  encoding.h  libav_headers.h  main.cc
gosrc/: go.mod
gosrc/cmd/mp4parser/: flags.go  main.go
gosrc/mp4/: boxes.go  handler.go
gosrc/mp4/box/: box.go
gosrc/mp4/box/free/: free_box.go
gosrc/mp4/box/ftyp/: ftyp_box.go
gosrc/util/: read.go
gst-tutorials/: .gitignore  CMakeLists.txt  README.md
gst-tutorials/src/: basic-tutorial-1.c  basic-tutorial-2.c  basic-tutorial-3.c  element.c  goption_initialization.c  simple_audio_player.c  simple_initialization.c
learn-ffmpeg-libav-the-hard-way/: .gitignore  README.md
learn-ffmpeg-libav-the-hard-way/src/: 0_hello_world.c  2_remuxing.c
medialib/: go.mod
medialib/cmd/h26xdump/: flags.go  main.go  marshal.go
medialib/cmd/mp4dump/: .gitignore  flags.go  main.go  marshal.go  parse_mp4.go  print_boxes.go  print_no_parse_content.go
medialib/cmd/mp4parser/: .gitignore
medialib/mp4/: boxes.go  handler.go
medialib/mp4/box/: box.go  box_type.go  interface.go  util.go
medialib/mp4/box/cprt/: cprt_box.go
medialib/mp4/box/ctts/: ctts_box.go
medialib/mp4/box/dinf/: dinf_box.go
medialib/mp4/box/dref/: dref_box.go
medialib/mp4/box/free/: free_box.go
medialib/mp4/box/ftyp/: ftyp_box.go
medialib/mp4/box/hdlr/: hdlr_box.go
medialib/mp4/box/ilst/: ilst_box.go
medialib/mp4/box/mdat/: mdat_box.go
medialib/mp4/box/mdhd/: mdhd_box.go
medialib/mp4/box/mdia/: mdia_box.go
medialib/mp4/box/mehd/: mehd_box.go
medialib/mp4/box/meta/: meta_box.go
medialib/mp4/box/mfhd/: mfhd_box.go
medialib/mp4/box/minf/: minf_box.go
medialib/mp4/box/moof/: moof_box.go
medialib/mp4/box/moov/: moov_box.go
medialib/mp4/box/moov/mvhd/: mvhd_box.go
medialib/mp4/box/moov/udta/: udta_box.go
medialib/mp4/box/moov/udta/meta/: meta_box.go
medialib/mp4/box/moov/udta/meta/ilst/: ilst_box.go
medialib/mp4/box/mvex/: mvex_box.go
medialib/mp4/box/mvhd/: mvhd_box.go
medialib/mp4/box/sampleentry/: sample_entry.go
medialib/mp4/box/sampleentry/avc1/: avc1_sample_entry.go
medialib/mp4/box/sampleentry/avcC/: avcC_box.go  avc_decoder_configuration_record.go
medialib/mp4/box/sampleentry/btrt/: btrt_box.go
medialib/mp4/box/sampleentry/esds/: decoder_config_desriptor.go  decoder_specific_info.go  descriptor.go  es_descriptor.go  esds_box.go  sl_config_descriptor.go
medialib/mp4/box/sampleentry/mp4a/: mp4a_box.go
medialib/mp4/box/sampleentry/soun/: audio_sample_entry.go
medialib/mp4/box/sampleentry/vide/: visual_sample_entry.go
medialib/mp4/box/smhd/: smhd_box.go
medialib/mp4/box/stbl/: stbl_box.go
medialib/mp4/box/stco/: stco_box.go
medialib/mp4/box/stsc/: stsc_box.go
medialib/mp4/box/stsd/: stsd_box.go
medialib/mp4/box/stss/: stss_box.go
medialib/mp4/box/stsz/: stsz_box.go
medialib/mp4/box/stts/: stts_box.go
medialib/mp4/box/tfdt/: tfdt_box.go
medialib/mp4/box/tfhd/: tfhd_box.go
medialib/mp4/box/tkhd/: tkhd_box.go
medialib/mp4/box/traf/: traf_box.go
medialib/mp4/box/trak/: trak_box.go
medialib/mp4/box/trex/: trex_box.go
medialib/mp4/box/trun/: trun_box.go
medialib/mp4/box/udta/: udta_box.go
medialib/mp4/box/url/: data_entry_url_box.go
medialib/mp4/box/urn/: data_entry_urn_box.go
medialib/mp4/box/vmhd/: vmhd_box.go
medialib/util/: marshaler.go  read.go
medialib/util/bitreader/: bit_reader.go  bit_reader_test.go
medialib/util/expgolombcoding/: signed.go  unsigned.go
medialib/video/avc/annexbes/: annexb_es.go
medialib/video/avc/es/: es.go
medialib/video/avc/nalu/: nalu.go  nalu_type.go
medialib/video/avc/nalu/aud/: access_unit_delimiter.go
medialib/video/avc/nalu/pps/: picture_parameter_set.go
medialib/video/avc/nalu/sei/: sei_message.go  user_data_unregistered.go
medialib/video/avc/nalu/slice/: slice_header.go  slice_layer_without_partitioning_rbsp.go
medialib/video/avc/nalu/sps/: hrd_parameters.go  scaling_list.go  sequence_parameter_set.go  vui_parameters.go
mf-async/: CMakeLists.txt  README.md  async_callback.h  main.cc  square_root.cc  square_root.h
nginx/: Dockerfile  README.md  nginx.conf
opencv-tutorials/: README.md  change_colorspace.py  drawing.py  image_rw.py  mouse_paint_brush.py  trackbar_color_palette.py  video_capture.py
opengl-tests/: CMakeLists.txt  README.md  main.cc
pyav-tests/: .gitignore  README.md  plot-av.py  probe_durations.py
rtmp-flv/: CMakeLists.txt  README.md  RTMPSession.cc  RTMPSession.h  main.cc
